--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,6 @@ font-weight: 700;
  body {
     font-family: "Roboto", sans-serif;
     color: #434455;
-    background-color: #fff;;
  }
 /* Reset */
 ul, ol {
@@ -77,6 +76,11 @@ address {
         letter-spacing: 0.02em;
         color: #2e2f42;
 }
+.nav-menu-link:hover,
+.nav-menu-link:focus{
+color:#404bbf;
+}
+
 
 .contacts {}
 
@@ -90,6 +94,11 @@ address {
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #434455;
+}
+
+.contacts-link:hover,
+.contacts-link:focus {
+    color: #404bbf;
 }
 /* #endregion */
 
@@ -125,15 +134,23 @@ address {
         line-height: 1.5;
         letter-spacing: 0.04em;
         color: #fff;
+
+}
+.btn:hover,
+.btn:focus{
+    background-color: #404bbf;
 }
 
 .btn-accent {
     background-color: #4d5ae5;
+
 }
+
 /* #endregion */
 
 /* #region Benefits */
-.benefits {}
+.benefits {
+}
 
 .benefits-list {}
 
@@ -158,7 +175,9 @@ address {
 
 /* #region Team */
 
-.team {}
+.team {
+    background-color: #f4f4fd;
+}
 
 .team-title {
    
@@ -210,7 +229,7 @@ address {
 }
 /* #endregion */
 
-/* #region Portfolio */
+/* #region Footer */
 .footer {
     background-color: #2e2f42;
 }
@@ -222,10 +241,11 @@ address {
         line-height: 1.17;
         letter-spacing: 0.03em;
         text-transform: uppercase;
-        color: #4d5ae5;
+        color: #f4f4fd;
+        
 }
 .footer-logo-part {
-    color:  #f4f4fd;
+color: #4d5ae5;
 }
 
 .footer-slogan {font-weight: 400;
