--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,7 @@ font-weight: 700;
  body {
     font-family: "Roboto", sans-serif;
     color: #434455;
+    background-color: #fff;
  }
 /* Reset */
 ul, ol {
@@ -58,11 +59,12 @@ address {
         line-height: 1.17;
         letter-spacing: 0.03em;
         text-transform: uppercase;
-        color: #4d5ae5;
+        color: #2e2f42;
 }
 
 .logo-part {
-    color: #2e2f42;
+    color: #4d5ae5;
+    
 }
 
 .nav-menu {}
@@ -185,13 +187,29 @@ color:#404bbf;
 
 .team-list {}
 
-.team-item {}
+.team-item {
+    background-color: #fff;
+}
 
 .team-ill {}
 
-.team-name {}
+.team-name {
+font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+}
 
-.team-subtitle {}
+.team-subtitle {
+font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #434455;
+}
 /* #endregion */
 
 /* #region Portfolio */
